--- a/Исследование_надёжности_заёмщиков/Исследование_надёжности_заёмщиков.ipynb
+++ b/Исследование_надёжности_заёмщиков/Исследование_надёжности_заёмщиков.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'> Привет!) Поздравляю с первым самостоятельным проектом.  Далее в файле ты можешь найти мои комменатрии, выделенные синим. Пожайлуста, постарайся учесть их при доработке.</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Исследование надёжности заёмщиков\n",
     "\n",
     "Заказчик — кредитный отдел банка. Нужно разобраться, влияет ли семейное положение и количество детей клиента на факт погашения кредита в срок. Входные данные от банка — статистика о платёжеспособности клиентов.\n",
@@ -400,9 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Каждая строка таблицы содержит обезличенную информацию о клиенте банка (каличество детей, трудовой стаж, возраст, образование, семейный статус, пол, тип занятости, ежемесячный доход и цель взятия кредита).Для проверки гипотезы о влиянии семейного положения и количества детей клиента на факт погашения кредита в срок будут использоваться главным образом столбцы *'children'*, *'family_status'*, *'debt'*. В таблице данных есть пропуски. В столбце *'education'* одинаковые значения имеют различный регистр букв. В  столбце общего стажа работы - *'days_employed'* для ещё работающих клиентов стаж отрицательный. Отрицательные значения возникают из-за формулы расчёта общего стажа работы, который рассчитывается как разность: из суммы дат конца каждого периода трудовой деятельности вычитают сумму дат начала каждого периода трудовой деятельности. Точное значение общего стажа по этой формуле определяется только для пенсионенов, так как для ещё работающих клиентов в формуле не достаёт одного значения.\n",
-    "\n",
-    "<font color='blue'> Отлично, очень подробный анализ сырых данных.</font>"
+    "Каждая строка таблицы содержит обезличенную информацию о клиенте банка (каличество детей, трудовой стаж, возраст, образование, семейный статус, пол, тип занятости, ежемесячный доход и цель взятия кредита).Для проверки гипотезы о влиянии семейного положения и количества детей клиента на факт погашения кредита в срок будут использоваться главным образом столбцы *'children'*, *'family_status'*, *'debt'*. В таблице данных есть пропуски. В столбце *'education'* одинаковые значения имеют различный регистр букв. В  столбце общего стажа работы - *'days_employed'* для ещё работающих клиентов стаж отрицательный. Отрицательные значения возникают из-за формулы расчёта общего стажа работы, который рассчитывается как разность: из суммы дат конца каждого периода трудовой деятельности вычитают сумму дат начала каждого периода трудовой деятельности. Точное значение общего стажа по этой формуле определяется только для пенсионенов, так как для ещё работающих клиентов в формуле не достаёт одного значения."
    ]
   },
   {
@@ -579,9 +570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Существующие в таблице явные пропуски были заполнены. Строки с нулевым значением для возраста клиентов были удалены.\n",
-    "\n",
-    "<font color='blue'>Пропуски заполнены правильно. Медиана - это верное решение.</font>"
+    "Существующие в таблице явные пропуски были заполнены. Строки с нулевым значением для возраста клиентов были удалены."
    ]
   },
   {
@@ -647,9 +636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Были заменены данные типа *flot* (вещественный числа) на *int* (целые числа) методом *astype*.\n",
-    "\n",
-    "<font color='blue'> Отлично, типы данных заменены на верные. Здесь тоже можно было info вывести.</font>"
+    "Были заменены данные типа *flot* (вещественный числа) на *int* (целые числа) методом *astype*."
    ]
   },
   {
@@ -813,10 +800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Одна из причин возникновения дубликатов в таблице: следствие того, что пропуенные значения в столбцах 'общий трудовой стаж' и 'ежемесячный доход' были заполнены медианой по соответствующим группам занятости. Остаётся удалить смысловые дубликаты в столбце с целями кредита\n",
-    "\n",
-    "\n",
-    "<font color='blue'> С дублями справились - это важный шаг.</font>"
+    "Одна из причин возникновения дубликатов в таблице: следствие того, что пропуенные значения в столбцах 'общий трудовой стаж' и 'ежемесячный доход' были заполнены медианой по соответствующим группам занятости. Остаётся удалить смысловые дубликаты в столбце с целями кредита"
    ]
   },
   {
@@ -912,9 +896,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "С помощью ламмизации целей взятия кредитов клиентами из таблицы данных были выделены соответствующие леммы целей (свадьба, жильё, недвижимость, автомобиль, образование)\n",
-    "\n",
-    "<font color='blue'> Ок, лемматизация выполнена верно. Заодно и категоризацию начали делать. В принципе это можно было разделить на два разных шага. Сначала стоило посмотреть леммы, чтоб определиться с категориями, а затем уже категорезировать цели кредита. Ты наверное так и делал, но в итоговом варианте следов не осталось и не очень ясно откуда взялись категории.</font>"
+    "С помощью ламмизации целей взятия кредитов клиентами из таблицы данных были выделены соответствующие леммы целей (свадьба, жильё, недвижимость, автомобиль, образование)"
    ]
   },
   {
@@ -1149,13 +1131,6 @@
     "    return 'многодетная'\n",
     "# добавим к таблице новый столбец со значениями категории семьи в зависимости от количества детей\n",
     "data['children_family_status'] = data['children'].apply(family_categories)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<font color='blue'> Категоризировать количество детей не стоило - это сокращает информативность данных. А вот категоризацию по уровню дохода надо было сделать.</font>"
    ]
   },
   {
@@ -1499,13 +1474,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'> Да, вот и категоризация по джоходу - ее лучше сделать в разделе категоризации. Хорошо, что ты посмотрел медиану, но в целом категории лучше брать по квантилям, а не просто по произвольным уровням.</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Сгруппируем клиентов по уровню доходов, посчитаем общее число заёмщиков и количество случаев проблем с возвратом кредита. Затем посчитаем процент возникновения проблем по каждой группе."
    ]
   },
@@ -1754,9 +1722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Клиенты, которые берут кредит с целью приобретения жилья или операций с ним стараются выплачивать кредит вовремя. Наибольший процент проблем с выплотой кредитов встречается у клиентов, которые берут кредит для оплаты образованию или покупки авто.\n",
-    "\n",
-    "<font color='blue'> Ответы на вопросы выполнены верно.</font>"
+    "Клиенты, которые берут кредит с целью приобретения жилья или операций с ним стараются выплачивать кредит вовремя. Наибольший процент проблем с выплотой кредитов встречается у клиентов, которые берут кредит для оплаты образованию или покупки авто."
    ]
   },
   {
@@ -1770,46 +1736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Проверка четырёх гипотез о зависимости числа проблем выплат кредита от ряда параметров количества детей в семье, семейного статуса, дохода и целей кредита клиентов. Разброс значения процента возникновения проблем с выплотами к общему числу случаев невелик (в переделах 3-4%).C повышением числа детей в семье растут риски невыплат по кредитам. Клиенты у которых есть семьи или она была у них в прошлом демонстрируют более высокий уровень ответственности по своим обязательствам. Люди с доходами выше уровня бедности находятся в зоне риска по невыплатам за кредиты. Покупка жилья для клиентов является жизненной необходимостью, поэтому риски по невыплотам гораздо ниже, чем за приобретение предметов роскоши (автомобиль или свадьба) или рискованных инвестицей (образование).\n",
-    "\n",
-    "<font color='blue'> Проект выполнен хорошо. КЕсть небольшие замечания, но критических ошибок нет. Хороший старт, удачи в следующих проектах.</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Чек-лист готовности проекта\n",
-    "\n",
-    "Поставьте 'x' в выполненных пунктах. Далее нажмите Shift+Enter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [x]  открыт файл;\n",
-    "- [x]  файл изучен;\n",
-    "- [x]  определены пропущенные значения;\n",
-    "- [x]  заполнены пропущенные значения;\n",
-    "- [x]  есть пояснение какие пропущенные значения обнаружены;\n",
-    "- [x]  описаны возможные причины появления пропусков в данных;\n",
-    "- [x]  объяснено по какому принципу заполнены пропуски;\n",
-    "- [x]  заменен вещественный тип данных на целочисленный;\n",
-    "- [x]  есть пояснение какой метод используется для изменения типа данных и почему;\n",
-    "- [x]  удалены дубликаты;\n",
-    "- [x]  есть пояснение какой метод используется для поиска и удаления дубликатов;\n",
-    "- [x]  описаны возможные причины появления дубликатов в данных;\n",
-    "- [x]  выделены леммы в значениях столбца с целями получения кредита;\n",
-    "- [x]  описан процесс лемматизации;\n",
-    "- [x]  данные категоризированы;\n",
-    "- [x]  есть объяснение принципа категоризации данных;\n",
-    "- [x]  есть ответ на вопрос \"Есть ли зависимость между наличием детей и возвратом кредита в срок?\";\n",
-    "- [x]  есть ответ на вопрос \"Есть ли зависимость между семейным положением и возвратом кредита в срок?\";\n",
-    "- [x]  есть ответ на вопрос \"Есть ли зависимость между уровнем дохода и возвратом кредита в срок?\";\n",
-    "- [x]  есть ответ на вопрос \"Как разные цели кредита влияют на его возврат в срок?\";\n",
-    "- [x]  в каждом этапе есть выводы;\n",
-    "- [x]  есть общий вывод."
+    "Проверка четырёх гипотез о зависимости числа проблем выплат кредита от ряда параметров количества детей в семье, семейного статуса, дохода и целей кредита клиентов. Разброс значения процента возникновения проблем с выплотами к общему числу случаев невелик (в переделах 3-4%).C повышением числа детей в семье растут риски невыплат по кредитам. Клиенты у которых есть семьи или она была у них в прошлом демонстрируют более высокий уровень ответственности по своим обязательствам. Люди с доходами выше уровня бедности находятся в зоне риска по невыплатам за кредиты. Покупка жилья для клиентов является жизненной необходимостью, поэтому риски по невыплотам гораздо ниже, чем за приобретение предметов роскоши (автомобиль или свадьба) или рискованных инвестицей (образование)."
    ]
   }
  ],
@@ -1829,7 +1756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
